--- a/index.ipynb
+++ b/index.ipynb
@@ -41,12 +41,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your solution here  "
+    "yes, it is a 2/3 chance if you switch doors"
    ]
   },
   {
@@ -58,12 +56,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your solution here "
+    "$D_1$: If the car is behind Door 1 then it doesn't matter which of Doors 2 and 3 that Monte opens. Thus this probability is $P(H \\mid D_1) = \\frac{1}{2}$\n",
+    "\n",
+    "$D_2$: If the car is behind Door 2 then Monte must open Door 3. Thus this probability is $P(H \\mid D_2) = 1$\n",
+    "\n",
+    "$D_3$: If the car is behind Door 3 then there is no way that Monte will open Door 3. Thus this probability is $P(H \\mid D_3) = 0$"
    ]
   },
   {
@@ -75,12 +75,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your solution here "
+    "Solution: Assuming that it is equally likely that the car is behind any door, we have $P(D_i) = \\frac{1}{3}$ for $i=1, 2, 3$. We then have\n",
+    "\n",
+    "$$\\begin{eqnarray}\n",
+    "\\nonumber P(H) $=$; P(H \\mid D_1)P(D_1) + P(H \\mid D_3)P(D_3) + P(H \\mid D_3)P(D_3) \\\\\n",
+    "\\nonumber      &=&; \\frac{1}{2}\\cdot\\frac{1}{3} + 1\\cdot\\frac{1}{3} + 0\\cdot\\frac{1}{3} \\\\ \n",
+    "\\nonumber      &=&; \\frac{1}{2}\n",
+    "\\end{eqnarray}$$"
    ]
   },
   {
@@ -92,12 +96,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your solution here"
+    "\n",
+    "Solution: From Bayes' Rule, we have\n",
+    "\n",
+    "$$\n",
+    "p(D_1 ~|~ H) = \\frac{P(H \\mid D_1)P(D_1)}{P(H)} = \\frac{\\frac{1}{2} \\cdot \\frac{1}{3}}{\\frac{1}{2}} = \\frac{1}{3} ~~~~~~~~ \\textrm{and} ~~~~~~~~\n",
+    "p(D_2 ~|~ H) = \\frac{P(H \\mid D_2)P(D_2)}{P(H)}  = \\frac{1 \\cdot \\frac{1}{3}}{\\frac{1}{2}} = \\frac{2}{3}\n",
+    "$$\n",
+    "Thus if we switch we have a probability of $\\frac{2}{3}$ of winning the car.# Your solution here"
    ]
   },
   {
@@ -113,29 +122,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "def make_a_deal(switch=True):\n",
-    "    doors = None\n",
-    "    car = None\n",
-    "    first_choice = None\n",
-    "    montes_options = None\n",
-    "    goat = None\n",
-    "    final_choice = None\n",
-    "    pass\n",
+    "    doors = [1, 2, 3]\n",
+    "    car = np.random.choice(doors)\n",
+    "    first_choice = np.random.choice(doors)\n",
+    "    montes_options = list(set(doors) - set([car]) - set([first_choice]))\n",
+    "    goat = np.random.choice(montes_options)\n",
+    "    final_choice = (set(doors) - set([goat]) - set([first_choice])).pop() if switch else first_choice\n",
+    "    return final_choice == car\n",
     "\n",
     "def monte_hall_sim(switch=True, num_trials=int(1e3)): \n",
-    "    winners = None\n",
-    "    state = None  # \"switching)\" if switch else \"not switching)\"\n",
-    "    print(\"P(winning by \"+state+\" = {:.4f}\".format(winners/num_trials))"
+    "    winners = np.sum([make_a_deal(switch) for i in range(num_trials)])\n",
+    "    state =\"switching)\" if switch else \"not switching)\"\n",
+    "    print(\"P(winning by \"+state+\" = {:.4f}\".format(winners/num_trials))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,11 +154,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(winning by switching) = 0.6663\n"
+     ]
+    }
+   ],
    "source": [
-    "#monte_hall_sim(switch=True, num_trials=int(1e5))\n",
+    "monte_hall_sim(switch=True, num_trials=int(1e5))\n",
     "\n",
     "\n",
     "\n",
@@ -157,11 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(winning by not switching) = 0.3338\n"
+     ]
+    }
+   ],
    "source": [
-    "#monte_hall_sim(switch=False, num_trials=int(1e5))\n",
+    "monte_hall_sim(switch=False, num_trials=int(1e5))\n",
     "\n",
     "\n",
     "\n",
@@ -169,12 +195,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Record your observations here "
+    "when switching, one will win twice as often! its hard to believe but by golly I do!"
    ]
   },
   {
@@ -203,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
